# cfg-climada-fork

./: .gitignore  Makefile  README.md  all-files.txt  climada.conf  pyproject.toml  setup.py
.github/scripts/: make_release.py  setup_devbranch.py
doc/getting-started/: 0_intro_python.ipynb
doc/tutorial/: climada_entity_Exposures_osm.ipynb
doc/user-guide/: 0_10min_climada.ipynb  1_main_climada.ipynb  climada_engine_Forecast.ipynb  climada_engine_Impact.ipynb  climada_engine_impact_data.ipynb  climada_engine_unsequa.ipynb  climada_engine_unsequa_helper.ipynb  climada_entity_Exposures_osm.ipynb  climada_entity_Exposures_polygons_lines.ipynb  climada_entity_ImpactFuncSet.ipynb  climada_entity_MeasureSet.ipynb  climada_hazard_Hazard.ipynb  climada_hazard_copernicus_seasonal_forecast.ipynb  climada_util_api_client.ipynb  climada_util_calibrate.ipynb  climada_util_earth_engine.ipynb
script/jenkins/: test_data_api.py
src/climada/: __init__.py
tests/: test_api_client.py  test_calibration.py  test_engine.py  test_hazard.py  test_nightlight.py  test_plot.py
tests/calibrate/: test_base.py
tests/centroids/: test_centr.py
tests/engine/: test_cost_benefit.py  test_forecast.py  test_impact.py  test_impact_calc.py
tests/entity/: test_entity.py
tests/exposure/: test_base.py  test_nightlight.py
tests/hazard/: test_base.py  test_io.py  test_storm_europe.py  test_tc_cc.py  test_tc_tracks.py  test_tc_tracks_synth.py
tests/impact_funcs/: test_tc.py
tests/util/: test_checker.py  test_config.py  test_coordinates.py  test_lines_polys_handler.py  test_plot.py  (+3 more)
(+40 files in other folders)
