[project]
name = "climada"
version = "6.0.2"
requires-python = "==3.12.*"
dependencies = [
    "cartopy>=0.24.1",
    "cftime>=1.6.4.post1",
    "contextily>=1.6.2",
    "dask>=2025.7.0",
    "deprecation>=2.1.0",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "h5py>=3.14.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.2",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pathos>=0.3.4",
    "peewee>=3.18.2",
    "pint>=0.24.4",
    "pyarrow>=21.0.0",
    "pycountry>=24.6.1",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "sparse>=0.17.0",
    "statsmodels>=0.14.5",
    "tables>=3.10.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "xarray>=2025.6.1",
    "xlsxwriter>=3.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
   "ee>=0.2",
   "pytest>=8.4.1",
   "pytest-cov>=6.2.1",
   "pytest-xdist>=3.8.0",
]
